# LB_Note

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SESSION_STATE.md  pyproject.toml  run.py  run_extract.py  run_postprocess.py
answer/: ax_tf_클로바.txt
config/: glossary.ko.json  participants.json
deploy/: .env.deploy.example  Caddyfile  Dockerfile  Dockerfile.dockerignore  README.md  bootstrap.sh  docker-compose.yml  entrypoint.sh  gen-cert.sh
docker/: build.sh  deploy.sh  dev-setup.sh  dev.sh  run-dev.sh  run.sh
docs/: 2026-05-29-session-summary.md  2026-05-29-slice-crash-and-repetition-fix.md  2026-06-01-ax-stt-향상-청킹-디코딩-실험.md  2026-06-01-server-deploy-validation.md  2026-06-02-stt-data-shape-analysis.md  2026-06-04-postprocess-pipeline-design.md  2026-06-04-stt-accuracy-judgment.md  2026-06-04-vad-chunk-pipeline.md  2026-06-09-action-item-criteria.md  2026-06-09-frontend-api-contract.md  2026-06-09-summarize-stage-design.md  2026-06-12-per-user-claude-credential-contract.md  2026-06-17-action-item-methodology-upgrade.md  2026-06-17-온프레미스-보안-작업-보고.md  2026-06-24-피드백-기능-관측성-정리배치.md  2026-06-26-claude-oauth-token-tos-risk.md  2026-07-06-캘린더-드라이브-작업-정리.md  2026-07-08-ops-deploy-runbook.md  2026-07-08-session-handoff-regenerate-auth-ux.md  2026-07-09-slack-control-bot.md  2026-07-09-ui-ux-리뷰-개선안.md  2026-07-10-slack-bot-notice-and-ux.md  2026-07-16-ux-페르소나-리뷰-종합.md  2026-07-22-STT-잡-관측성-무한루프-진단.md  2026-07-22-claude-자격증명-헬스-UI.md  2026-07-24-slack-jira-연동-설계.md  denoiser-zipenhancer-plan.md  docker-deploy.md  feat-vad-handoff.md  modularization-plan.md  slack-app-manifest.yml
eval/: gold_actionitems.json  sample_for_review.py
prompts/: clean.ko.md  extract.ko.md  summarize.ko.md
src/: _smoke.py  audio_io.py  chunker.py  config.py  evaluate.py  pipeline.py  preprocess.py  quality.py  reference.py  repetition.py  scoring.py  stt.py  types.py
tests/: conftest.py  test_action_item_ids.py  test_admin_users.py  test_auth.py  test_credential_health.py  test_db_backup.py  test_doc_template.py  test_extract_actions_endpoint.py  test_extract_anchor.py  test_extract_handoff.py  test_google_calendar.py  test_google_credential.py  test_google_drive_sync.py  test_google_oauth_config.py  test_homophone_gate.py  test_input_contract.py  test_jira_client.py  test_jira_config.py  test_job_cancel.py  test_job_observability.py  test_meeting_audio.py  test_meeting_doc_render.py  test_meeting_email.py  test_meeting_patch.py  test_meeting_revert.py  test_observability_cleanup.py  test_profile_edit.py  (+11 more)
(+93 files in other folders)
