[project]
name = "lb-note"
version = "0.0.1"
description = "Cohere transcribe-03-2026 전용 STT venv (transformers 5.x, trust_remote_code)"
requires-python = ">=3.12"
dependencies = [
    "transformers==5.5.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.45.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "sentencepiece>=0.2.1",
    "protobuf>=7.35.0",
    "python-dotenv>=1.2.2",
    "safetensors>=0.7.0",
    "tqdm>=4.67.3",
    "nara-wpe>=0.0.11",
    "matplotlib>=3.10.9",
    "silero-vad>=5.1",
    "einops>=0.7",
    "fastapi>=0.136",
    "uvicorn>=0.49",
    "pyjwt>=2.13",
    "passlib>=1.7",
    "python-multipart>=0.0.32",
]

# torch/torchaudio 는 GPU 아키텍처별 휠이 달라 상호 배타 extra 로 분리.
#   cu121 → RTX 4090 (Ada, 160 서버),  cu128 → RTX PRO 6000 (Blackwell, 171 서버)
# 로컬/도커 모두 반드시 한쪽 선택: `uv sync --extra cu121` 또는 `--extra cu128`.
[project.optional-dependencies]
cu121 = ["torch>=2.4,<2.6", "torchaudio>=2.5,<2.6"]
cu128 = ["torch>=2.7", "torchaudio>=2.7"]

[tool.uv]
conflicts = [[{ extra = "cu121" }, { extra = "cu128" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
    { index = "pytorch-cu121", extra = "cu121" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
